Fix Heading clipping on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 html {
-  font-size: 21px;
-  font-size: calc(21px + (48 - 21) * ((100vh - 520px) / (2160 - 520)));
+  font-size: 20px;
+  font-size: calc(20px + (48 - 20) * ((100vh - 520px) / (2160 - 520)));
   font-family: "Spectral", serif;
 }
 
@@ -31,8 +31,8 @@ header {
 }
 
 .logo > h1 {
-  font-size: 2em;
-  letter-spacing: 4vw;
+  font-size: 1.8em;
+  letter-spacing: 3vw;
 
   opacity: 0.05;
 
